# Demoplanner

./: .gitignore  README.md
results/: afer_constraints.csv  constraint_0.5deg.csv  constraint_10deg.csv  constraint_15deg.csv  constraint_1deg.csv  constraint_2deg.csv  constraint_5deg.csv  plot.py  plot_results.py  singularity_test.csv
results/multi_start/: multi_start_results.csv
src/: logs.txt
src/warehouse_demo_py/: package.xml  setup.cfg  setup.py
src/warehouse_demo_py/warehouse_demo_py/: add_warehouse_scene.py  plan_warehouse_pick.py  warehouse_picker.py
src/warehouse_pick_cpp/: CMakeLists.txt  package.xml
src/warehouse_pick_cpp/config/: experiment.yaml
src/warehouse_pick_cpp/src/: find_topdown_joints.cpp  orientation_finder.cpp  warehouse_pick_place.cpp  warehouse_systems_demo.cpp
src/warehouse_pick_cpp/src/utils/: config_loader.cpp  config_loader.hpp  experiment_logger.cpp  experiment_logger.hpp
